Fixes wrapping toolbar tools

--- a/src/styles/components/poster/_toolbar.sass
+++ b/src/styles/components/poster/_toolbar.sass
@@ -45,6 +45,7 @@
 
 .poster_toolbar_tools
     order: 2
+    flex-shrink: 0
     min-width: 14rem
     text-align: right
     cursor: pointer
